# Windsong-Lyre-Genshin-Impact-EasyX-

./: CMakeLists.txt  Channel.hpp  Note.cpp  Note.hpp  Piano.hpp  README.md  Scene.hpp  Scene1.cpp  Scene2.cpp  Scene2.hpp  Scene3.cpp  Scene3.hpp  Sound.hpp  button.hpp  graphics.cpp  graphics.hpp  main.cpp  scene1.hpp  string.cpp  string.hpp
audio/: a  readme.md
lib/: readme.md
resource/: readme  readme.md  resources.rc
resource/img/: readme.md
score/: 团子大家族.txt
